// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AsyncStorageKeys 1`] = `
Object {
  "accountInfo": [Function],
  "accounts": "accounts",
  "authInfo": "auth_info",
  "chatsStorage": "chatsStorage",
  "contacts": "contacts",
  "lang": "lang",
  "price": [Function],
  "profile": "profile",
  "urls": "urls",
  "users": "users",
}
`;

exports[`Test PasscodeStorageKeys 1`] = `
Object {
  "passcode": "passcode",
}
`;

exports[`Test SecureStorageKeys 1`] = `
Object {
  "authJWT": "auth_jwt",
  "firebaseToken": "firebase_token",
  "passcodeHash": "passcode_hash",
  "salt": "salt",
  "seed": "seed",
}
`;

exports[`Test biometryOption 1`] = `
Object {
  "accessControl": 0,
  "authenticationPrompt": Object {
    "title": "Please Authenticate",
  },
  "service": "com.fractapp",
}
`;

exports[`Test disablePasscode 1`] = `
Promise {
  "_U": 0,
  "_V": 0,
  "_W": null,
  "_X": null,
}
`;

exports[`Test enablePasscode negative 1`] = `
Promise {
  "_U": 0,
  "_V": 0,
  "_W": null,
  "_X": null,
}
`;

exports[`Test enablePasscode positive 1`] = `
Promise {
  "_U": 0,
  "_V": 0,
  "_W": null,
  "_X": null,
}
`;

exports[`Test secureOption 1`] = `
Object {
  "service": "com.fractapp",
}
`;
